# mibu-flow

be/: .gitignore  README.md  output.txt  pyproject.toml  test.py
be/mibu_flow_be/: cli.py  constants.py
be/mibu_flow_be/lib/: api.py  logger.py  openai_entities.py
be/mibu_flow_be/utils/: create_assistant.py  delete_all_assistants.py  initialize.py
fe/: index.html  package-lock.json  package.json  tailwind.config.js
fe/src/: App.jsx  FileUploadContext.jsx  index.css
fe/src/components/: Automate.jsx  DndFile.jsx  FlowBar.jsx  Footer.jsx  GetStartedBtn.jsx  HomeElement.jsx  RunBtn.jsx  Sidebar.jsx  SignInBtn.jsx
fe/src/components/buttons/: GetStartedBtn.jsx  RestoreBtn.jsx  RunBtn.jsx  SaveBtn.jsx  ShareBtn.jsx  SignInBtn.jsx  SignUpBtn.jsx
fe/src/components/nodes/input/: BankFile.jsx  InputText.jsx
fe/src/components/nodes/output/: OutputText.jsx  SaveTxt.jsx
fe/src/components/nodes/process/: Ai.jsx  ProcessTextConcat.jsx
fe/src/components/text/: SplitText.jsx
fe/src/data/: users.json
fe/src/fetch/: EditorFetch.jsx
fe/src/fonts/: fonts.css
fe/src/pages/: Dashboard.jsx  Editor.jsx  Home.jsx  SignIn.jsx  SignUp.jsx  Test.jsx
