[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mibu-flow-be"
version = "0.1.0"
description = "Mibu Flow Backend"
authors = [
    { name = "James", email = "contact@jamesyap.org" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "python-dotenv",
    "openai"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.urls]
Homepage = "https://github.com/mibu-ai/mibu-flow/tree/main"
Documentation = "https://github.com/mibu-ai/mibu-flow/tree/main"

[project.scripts]
mibu-flow-be = "mibu_flow_be.cli:main"
